Improve creating layout geometry

--- a/.babelrc
+++ b/.babelrc
@@ -4,4 +4,13 @@
       "modules": false
     }]
   ],
+  "env": {
+    "test": {
+      "presets": [
+        ["@babel/env", {
+          "modules": "commonjs"
+        }]
+      ]
+    }
+  }
 }
