--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@talkrz/price-chart",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "publishConfig": {
     "access": "public"
   },
@@ -8,7 +8,8 @@
   "main": "dist/price-chart.js",
   "scripts": {
     "test": "export BABEL_ENV=test && mocha --require @babel/register",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "release": "node scripts/release.js"
   },
   "repository": {
     "type": "git",
