--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
   },
   "homepage": "https://github.com/talkrz/price-chart#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/register": "^7.0.0",
-    "mocha": "^5.2.0",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-uglify": "^6.0.0"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "@rollup/plugin-babel": "^5.2.2",
+    "mocha": "^8.2.1",
+    "rollup": "^2.34.2"
   }
 }
